--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
     "helmet": "^6.0.0",
@@ -15,6 +15,7 @@
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
     "validator": "^13.11.0"
   },
   "scripts": {
